# vibeedit-sdk

./: .gitattributes  .gitignore  .npmignore  CHANGELOG.md  LICENSE.md  README.md  SBOM.spdx.json  THIRD_PARTY_NOTICES.md  index.d.ts  motion.d.ts  package-lock.json  package.json  pyproject.toml  tsconfig.types.json
.github/ISSUE_TEMPLATE/: beta-feedback.yml
.github/workflows/: vibeedit-package.yml  vibeedit-registry-beta.yml
apple-vision-runner/: Package.swift
apple-vision-runner/Sources/: main.swift
benchmarks/: routing-requests.json  scene_tail_revision.py
benchmarks/competitive/: README.md  prepare_assets.py  run_vibeedit.py  task-manifest.json
catalog/: assets.json  catalog.json  catalog.schema.json  motion-components.json  motion-validation.json  preset-validation.json
catalog/motion-atoms/: manifest.json  v1.css
catalog/previews/: transparent-motion-overlay.webm
catalog/text-runtime/: manifest.json  registry-item.json  vibeedit-adapter.js
docs/: ARCHITECTURE.md  AUDIT.md  BETA.md  GAPS.md  HTML_MOTION_RUNTIME.md  LEGAL_REVIEW_HANDOFF.md  PYTHON_EFFECTS_TRANSITIONS.md  RELEASE.md  RELEASE_READINESS.md  SECURITY.md  TEXT_EFFECT_CONFORMANCE.md  VERSIONING.md
docs/evidence/: cef-shared-texture-benchmark.json  cef-shared-texture-mvp.json  cef-shared-texture-raw.json  current-candidate-proof.json  full-setup-proof.json  hybrid-renderer-benchmark.json  linux-amd64-emulated-proof.json  linux-arm64-proof.json  object-onnx-proof.json  public-beta-install-proof.json  sam21-public-proof.json
docs/experiments/: agent-iteration-log.md  competitive-benchmarks.jsonl  competitive-evaluation.md  incremental-revision-benchmarks.jsonl  routing-benchmarks.jsonl
examples/basic-generated/: composition.json  render.py
examples/beat-synchronized/: composition.json  manifest.json  render.py
examples/caption-rail/: composition.json  render.py
examples/effect-transition/: composition.json  render.py
examples/face-follow-text/: composition.json  manifest.json
examples/fan-edit/: composition.json  manifest.json
examples/mask-subject-effect/: composition.json  manifest.json
examples/mixed-python-html/: composition.json  render.py
experiments/: PRODUCTION-READINESS-20260716.md
runtime-models/: manifest.json
schema/: README.md  composition.schema.json
scripts/: audit_release_artifacts.py  benchmark_routing.py  build_previews.py  build_text_effect_previews.mjs  check_public_access.py  generate_catalog_site.py  generate_release_checksums.py  generate_sbom.py  generate_workflow_examples.py  import_canonical_text_runtime.py  import_media_presets.py  import_skills.py  import_text_components.py  normalize_catalog_examples.py  register_examples.py  smoke_release_artifacts.py  validate-package.js  validate_registry_release.py  verify_canonical_text_fidelity.mjs
site/: app.js  catalog-data.js  index.html  styles.css
skills/: index.json  migration-report.json
src/: catalog.js  data.js  examples.js  index.js  skills.js  spec.js  validation.js  version.js
test/: catalog.test.js  cli.test.js  motion-catalog.test.js  motion.test.js  registry-publish.test.js  skills.test.js  spec.test.js  types-smoke.ts
(+400 files in other folders)
