[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "vibeedit"
version = "0.1.0b1"
description = "VibeEdit-owned video composition, motion, rendering, and verification library."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
authors = [{ name = "Attention Engine Inc." }]
dependencies = ["jsonschema>=4.23,<5"]
keywords = ["video", "editing", "motion-graphics", "ffmpeg", "ai-agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
browser = ["playwright==1.61.0"]
effects = ["numpy==2.4.6; python_version == '3.11'", "numpy==2.5.1; python_version >= '3.12'", "pillow==11.3.0"]
vision = ["numpy==2.4.6; python_version == '3.11'", "numpy==2.5.1; python_version >= '3.12'", "pillow==11.3.0", "opencv-python-headless==4.13.0.92", "onnxruntime==1.27.0; sys_platform != 'darwin' or platform_machine != 'x86_64'"]
sam = ["numpy==2.4.6; python_version == '3.11'", "numpy==2.5.1; python_version >= '3.12'", "pillow==11.3.0", "opencv-python-headless==4.13.0.92", "torch==2.12.0", "torchvision==0.27.0", "hydra-core==1.3.2", "iopath==0.1.10", "tqdm==4.67.1"]
all = [
  "playwright==1.61.0",
  "numpy==2.4.6; python_version == '3.11'",
  "numpy==2.5.1; python_version >= '3.12'",
  "pillow==11.3.0",
  "opencv-python-headless==4.13.0.92",
  "onnxruntime==1.27.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "torch==2.12.0",
  "torchvision==0.27.0",
  "hydra-core==1.3.2",
  "iopath==0.1.10",
  "tqdm==4.67.1",
]
test = ["pytest>=8,<10", "build>=1.2,<2"]

[project.scripts]
vibeedit = "vibeedit.cli:main"

[project.urls]
Homepage = "https://vibeedit.com"
Repository = "https://github.com/Momenta-App/vibeedit-sdk"
Issues = "https://github.com/Momenta-App/vibeedit-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["python/src/vibeedit", "python/src/vibeedit_media"]

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.wheel.force-include]
"schema" = "vibeedit/data/schema"
"catalog" = "vibeedit/data/catalog"
"skills" = "vibeedit/data/skills"
"site" = "vibeedit/data/site"
"examples" = "vibeedit/data/examples"
"runtime-models" = "vibeedit/data/runtime-models"
"apple-vision-runner" = "vibeedit/data/apple-vision-runner"
"SBOM.spdx.json" = "vibeedit/data/SBOM.spdx.json"
"THIRD_PARTY_NOTICES.md" = "vibeedit/data/THIRD_PARTY_NOTICES.md"

[tool.hatch.build.targets.sdist]
include = [
  "/python",
  "/scripts",
  "/schema",
  "/catalog",
  "/skills",
  "/site",
  "/examples",
  "/runtime-models",
  "/apple-vision-runner",
  "/docs",
  "/LICENSE.md",
  "/SBOM.spdx.json",
  "/THIRD_PARTY_NOTICES.md",
  "/README.md",
  "/package.json",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
